# drf_twitter_react

./: README.md  jsconfig.json  pyproject.toml
backend/: DEL.sql  dump.rdb  jsconfig.json  schema.yml
backend/backend/: settings.py  urls.py
backend/drfapi/: admin.py  apps.py  manager.py  models.py  serializers.py  urls.py  views.py
backend/drfapi/management/commands/: seed.py
backend/drfapi/migrations/: 0001_initial.py  0002_advocate_groups_advocate_is_active_advocate_is_staff_and_more.py  0002_company.py  0003_alter_company_bio.py  0004_advocate_company.py  0005_advocate_profile_pic.py  0006_alter_advocate_profile_pic.py
backend/frontend/: package-lock.json  package.json  vite.config.js
backend/frontend/src/pages/: AdvocatePage.jsx  HomePage.jsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Form.jsx  Layout.jsx  Nav.jsx
frontend/src/pages/: AdvocatePage.jsx  HomePage.jsx  Login.jsx  Signup.jsx
frontend/src/utils/: PrivateRoute.jsx  api.js
